# GameOne

./: .clang-tidy  CMakeLists.txt  Errors.txt  GameOne.pyproject  ReadMe.txt  TODO.txt  actors.cpp  actors.h  application.cpp  application.h  assets.qrc  backend.cpp  backend.h  data.qrc  imageprovider.cpp  imageprovider.h  inventorymodel.cpp  inventorymodel.h  levelmodel.cpp  levelmodel.h  main.cpp  main.py  main.qrc  mapmodel.cpp  mapmodel.h  qml.qrc
data/: -1.level.json  1.level.json  1.map.txt  10.level.json  10.map.txt  11.level.json  11.map.txt  12.level.json  12.map.txt  13.level.json  13.map.txt  14.level.json  14.map.txt  15.level.json  15.map.txt  16.level.json  16.map.txt  17.level.json  17.map.txt  18.level.json  18.map.txt  19.level.json  19.map.txt  2.level.json  2.map.txt  20.level.json  20.map.txt  3.level.json  3.map.txt  4.level.json  4.map.txt  5.level.json  5.map.txt  6.level.json  6.map.txt  7.level.json  7.map.txt  8.level.json  8.map.txt  9.level.json  (+46 more)
qml/: BattleScreen.qml  BossBattleScreen.qml  Button.qml  Circle.qml  Debug.qml  GameGround.qml  GameOverOverlay.qml  GameScreen.qml  IntroScreen.qml  Joypad.qml  MainScreen.qml  Sidebar.qml  StartScreen.qml  TheGameIsOverScreen.qml  WelcomeScreen.qml  WitchShop.qml  main.qml
src/: actors.cpp  actors.h  application.cpp  application.h  backend.cpp  backend.h  imageprovider.cpp  inventorymodel.cpp  inventorymodel.h  levelmodel.cpp  levelmodel.h  main.cpp  mapmodel.cpp
tests/: CMakeLists.txt  svganimations.cpp  svganimations.qml  svganimations.qrc
